| Bug #46393 | If for slow_query_log a string is entered it does not complain. | ||
|---|---|---|---|
| Submitted: | 27 Jul 2009 8:51 | Modified: | 29 Jan 2011 23:17 |
| Reporter: | Oli Sennhauser | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Options | Severity: | S3 (Non-critical) |
| Version: | 5.1.36 | OS: | Any |
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
| Tags: | slow_query_log | ||
[27 Jul 2009 8:51]
Oli Sennhauser
[14 Jan 2011 23:21]
Alexey Botchkov
The testcase is problemmatic here. That thing manifests only with the warning in the server errorlog if the boolean option in the config file or command line specified incorrectly.
[14 Jan 2011 23:22]
Bugs System
Pushed into mysql-5.5 5.5.10 (revid:holyfoot@mysql.com-20110114221822-3jz165arzflboxsb) (version source revid:holyfoot@mysql.com-20110114221822-3jz165arzflboxsb) (merge vers: 5.5.10) (pib:24)
[14 Jan 2011 23:25]
Bugs System
Pushed into mysql-trunk 5.6.2 (revid:holyfoot@mysql.com-20110114222238-ora0koaemxb178ue) (version source revid:holyfoot@mysql.com-20110114222238-ora0koaemxb178ue) (merge vers: 5.6.2) (pib:24)
[18 Jan 2011 20:30]
Paul DuBois
Noted in 5.5.10, 5.6.2 changelogs. Boolean system variables can be enabled at run time by setting them to the value ON or OFF, but previously this did not work at server startup. Now at startup such variables can be enabled by setting them to ON or TRUE, or disabled by setting them to OFF or FALSE. Any other nonnumeric variable is invalid.
