Bug#46393 If for slow_query_log a string is entered it does not complain.         For all the boolean system variables we now issue warnings if the         value wasn't recognized. Before that we just silently set them         to FALSE in this case.

per-file comments:
  mysys/my_getopt.c
Bug #46393 If for slow_query_log a string is entered it does not complain.
        warning issued if no documented value was specified.